begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ipc.protocolPB
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ipc
operator|.
name|protocolPB
package|;
end_package

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|Closeable
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|ArrayList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Arrays
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Collection
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ipc
operator|.
name|ProtobufHelper
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ipc
operator|.
name|ProtocolMetaInterface
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ipc
operator|.
name|RPC
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ipc
operator|.
name|RefreshResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ipc
operator|.
name|RpcClientUtil
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ipc
operator|.
name|GenericRefreshProtocol
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ipc
operator|.
name|proto
operator|.
name|GenericRefreshProtocolProtos
operator|.
name|GenericRefreshRequestProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ipc
operator|.
name|proto
operator|.
name|GenericRefreshProtocolProtos
operator|.
name|GenericRefreshResponseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ipc
operator|.
name|proto
operator|.
name|GenericRefreshProtocolProtos
operator|.
name|GenericRefreshResponseCollectionProto
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|protobuf
operator|.
name|RpcController
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|protobuf
operator|.
name|ServiceException
import|;
end_import

begin_class
DECL|class|GenericRefreshProtocolClientSideTranslatorPB
specifier|public
class|class
name|GenericRefreshProtocolClientSideTranslatorPB
implements|implements
name|ProtocolMetaInterface
implements|,
name|GenericRefreshProtocol
implements|,
name|Closeable
block|{
comment|/** RpcController is not used and hence is set to null. */
DECL|field|NULL_CONTROLLER
specifier|private
specifier|final
specifier|static
name|RpcController
name|NULL_CONTROLLER
init|=
literal|null
decl_stmt|;
DECL|field|rpcProxy
specifier|private
specifier|final
name|GenericRefreshProtocolPB
name|rpcProxy
decl_stmt|;
DECL|method|GenericRefreshProtocolClientSideTranslatorPB ( GenericRefreshProtocolPB rpcProxy)
specifier|public
name|GenericRefreshProtocolClientSideTranslatorPB
parameter_list|(
name|GenericRefreshProtocolPB
name|rpcProxy
parameter_list|)
block|{
name|this
operator|.
name|rpcProxy
operator|=
name|rpcProxy
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|close ()
specifier|public
name|void
name|close
parameter_list|()
throws|throws
name|IOException
block|{
name|RPC
operator|.
name|stopProxy
argument_list|(
name|rpcProxy
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|refresh (String identifier, String[] args)
specifier|public
name|Collection
argument_list|<
name|RefreshResponse
argument_list|>
name|refresh
parameter_list|(
name|String
name|identifier
parameter_list|,
name|String
index|[]
name|args
parameter_list|)
throws|throws
name|IOException
block|{
name|List
argument_list|<
name|String
argument_list|>
name|argList
init|=
name|Arrays
operator|.
name|asList
argument_list|(
name|args
argument_list|)
decl_stmt|;
try|try
block|{
name|GenericRefreshRequestProto
name|request
init|=
name|GenericRefreshRequestProto
operator|.
name|newBuilder
argument_list|()
operator|.
name|setIdentifier
argument_list|(
name|identifier
argument_list|)
operator|.
name|addAllArgs
argument_list|(
name|argList
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|GenericRefreshResponseCollectionProto
name|resp
init|=
name|rpcProxy
operator|.
name|refresh
argument_list|(
name|NULL_CONTROLLER
argument_list|,
name|request
argument_list|)
decl_stmt|;
return|return
name|unpack
argument_list|(
name|resp
argument_list|)
return|;
block|}
catch|catch
parameter_list|(
name|ServiceException
name|se
parameter_list|)
block|{
throw|throw
name|ProtobufHelper
operator|.
name|getRemoteException
argument_list|(
name|se
argument_list|)
throw|;
block|}
block|}
DECL|method|unpack (GenericRefreshResponseCollectionProto collection)
specifier|private
name|Collection
argument_list|<
name|RefreshResponse
argument_list|>
name|unpack
parameter_list|(
name|GenericRefreshResponseCollectionProto
name|collection
parameter_list|)
block|{
name|List
argument_list|<
name|GenericRefreshResponseProto
argument_list|>
name|responseProtos
init|=
name|collection
operator|.
name|getResponsesList
argument_list|()
decl_stmt|;
name|List
argument_list|<
name|RefreshResponse
argument_list|>
name|responses
init|=
operator|new
name|ArrayList
argument_list|<
name|RefreshResponse
argument_list|>
argument_list|()
decl_stmt|;
for|for
control|(
name|GenericRefreshResponseProto
name|rp
range|:
name|responseProtos
control|)
block|{
name|RefreshResponse
name|response
init|=
name|unpack
argument_list|(
name|rp
argument_list|)
decl_stmt|;
name|responses
operator|.
name|add
argument_list|(
name|response
argument_list|)
expr_stmt|;
block|}
return|return
name|responses
return|;
block|}
DECL|method|unpack (GenericRefreshResponseProto proto)
specifier|private
name|RefreshResponse
name|unpack
parameter_list|(
name|GenericRefreshResponseProto
name|proto
parameter_list|)
block|{
comment|// The default values
name|String
name|message
init|=
literal|null
decl_stmt|;
name|String
name|sender
init|=
literal|null
decl_stmt|;
name|int
name|returnCode
init|=
operator|-
literal|1
decl_stmt|;
comment|// ... that can be overridden by data from the protobuf
if|if
condition|(
name|proto
operator|.
name|hasUserMessage
argument_list|()
condition|)
block|{
name|message
operator|=
name|proto
operator|.
name|getUserMessage
argument_list|()
expr_stmt|;
block|}
if|if
condition|(
name|proto
operator|.
name|hasExitStatus
argument_list|()
condition|)
block|{
name|returnCode
operator|=
name|proto
operator|.
name|getExitStatus
argument_list|()
expr_stmt|;
block|}
if|if
condition|(
name|proto
operator|.
name|hasSenderName
argument_list|()
condition|)
block|{
name|sender
operator|=
name|proto
operator|.
name|getSenderName
argument_list|()
expr_stmt|;
block|}
comment|// ... and put into a RefreshResponse
name|RefreshResponse
name|response
init|=
operator|new
name|RefreshResponse
argument_list|(
name|returnCode
argument_list|,
name|message
argument_list|)
decl_stmt|;
name|response
operator|.
name|setSenderName
argument_list|(
name|sender
argument_list|)
expr_stmt|;
return|return
name|response
return|;
block|}
annotation|@
name|Override
DECL|method|isMethodSupported (String methodName)
specifier|public
name|boolean
name|isMethodSupported
parameter_list|(
name|String
name|methodName
parameter_list|)
throws|throws
name|IOException
block|{
return|return
name|RpcClientUtil
operator|.
name|isMethodSupported
argument_list|(
name|rpcProxy
argument_list|,
name|GenericRefreshProtocolPB
operator|.
name|class
argument_list|,
name|RPC
operator|.
name|RpcKind
operator|.
name|RPC_PROTOCOL_BUFFER
argument_list|,
name|RPC
operator|.
name|getProtocolVersion
argument_list|(
name|GenericRefreshProtocolPB
operator|.
name|class
argument_list|)
argument_list|,
name|methodName
argument_list|)
return|;
block|}
block|}
end_class

end_unit

